<?xml version="1.0"?>
<package format="2">
  <name>voxblox</name>
  <version>0.0.0</version>
  <description>Voxfield: non-projective signed distance field for online planning and 3D reconstruction</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>
  <author email="yuepan@student.ethz.ch">Yue Pan</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>
  <maintainer email="yuepan@student.ethz.ch">Yue Pan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr</depend>
  <depend>protobuf_catkin</depend>

</package>
